# django_telegram

./: README.md  manage.py  pyproject.toml
django_telegram/: asgi.py  settings.py  urls.py  wsgi.py
telegram/: admin.py  bots.py  forms.py  models.py  serializers.py  urls.py  views.py
telegram/migrations/: 0001_initial.py
telegram/templates/: base.html  index.html  token.html
telegram/templates/account/: login.html  register.html
telegram/templates/includes/: auth_form.html  message_form.html
telegram/templates/telegram/: message_form.html  message_list.html
